--- a/src/scss/components/hamburger.scss
+++ b/src/scss/components/hamburger.scss
@@ -1,11 +1,3 @@
-a {
-    text-decoration: none;
-    color: #18003C;
-    font-size: 1em;
-    
-    transition: color 0.3s ease;
-}
-
 .menuelement {
     color: #18003C;
 }
